Exercise 1.10: logoutput/reader/manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
  namespace: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
      - name: logoutput-reader
        image: astranero/logoutput-reader:v.07
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: shared
            mountPath: /usr/src/shared/files
      - name: logoutput-writer
        image: astranero/logoutput-writer:v.07
        imagePullPolicy: Always
        volumeMounts:
          - name: shared
            mountPath: /usr/src/shared/files
      volumes:
        - name: shared
          emptyDir: {}
