Exercise 1.10: logoutput/reader/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: logoutput-svc
  namespace: logoutput
spec:
  selector:
    app:  logoutput
  type:  ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort:  8080
